--- a/index.html
+++ b/index.html
@@ -1553,7 +1553,7 @@ Our training blends discipline with drive, shaping players who stand tall in eve
 				</div>
 				<div class="elementor-element elementor-element-744467a elementor-widget elementor-widget-elementskit-heading" data-id="744467a" data-element_type="widget" data-widget_type="elementskit-heading.default">
 				<div class="elementor-widget-container">
-					<div class="ekit-wid-con" ><div class="ekit-heading elementskit-section-title-wraper text_center   ekit_heading_tablet-   ekit_heading_mobile-"><div class="ekit-heading--title elementskit-section-title ">Copyright © 2025 VibePing, powered by <span><span>Creed Creatives</span></span></div></div></div>				</div>
+					<div class="ekit-wid-con" ><div class="ekit-heading elementskit-section-title-wraper text_center   ekit_heading_tablet-   ekit_heading_mobile-"><div class="ekit-heading--title elementskit-section-title ">Copyright © 2025 Global Stag, made with ❤️ by <span><span>Solivox AI ❤️</span></span></div></div></div>				</div>
 				</div>
 				</div>
 					</div>
